tdf#105035 tdf#127622 writerfilter framePr: compare using style info

Prior to this patch, we were only comparing frame definitions
based on direct formatting properties.

Well, the definition can be spread throughout the paragraph styles,
and only if the end result matches will they all be part of one frame.

This patch fixes bug 127622 where three different styles all had
the same framePr settings.

It partially fixes bug 105035 - the frame is split in two - but
now the frames overlap. There is no "overlap" tick box in MSO,
although they do allow overlap - just not from other framePr text.
So this could end up giving me a lot of grief, where two frames
joined look OK, but split they will almost inevitably be stuck
overtop of each other - like we previously saw in bug 127622.

make CppunitTest_sw_ooxmlexport18 CPPUNIT_TEST_NAME=testTdf127622_framePr

Change-Id: Ie9ce9076d06029b8789a95b46f4ed49190ab09f7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150036
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>